autoloads file so that activation of packages can be done much faster,
which can speed up your startup significantly.
It also causes variables like 'package-user-dir' and
'package-load-list' to be consulted when 'package-quickstart-refresh'
is run rather than at startup so you don't need to set them in your
early init file.

*** New function 'package-activate-all'.

** Info

---
*** Info can now follow 'file://' protocol URLs.
The 'file://' URLs in Info documents can now be followed by passing
them to the 'browse-url' function, like the other protocols: ftp,
http, and https.  This allows to have references to local HTML files,
for example.

** Xref

+++
*** New command 'xref-find-definitions-at-mouse'.
This command finds definitions of the identifier at the place of a
mouse click event, and is intended to be bound to a mouse event.

+++
*** Changing 'xref-marker-ring-length' works after 'xref.el' is loaded.
Previously, setting 'xref-marker-ring-length' would only take effect
if set before 'xref.el' was loaded.

---
*** 'xref-find-definitions' now sets the mark at the buffer position
where it was invoked.

---
*** New xref faces 'xref-file-header', 'xref-line-number', 'xref-match'.

*** New variable 'xref-show-definitions-function'.
It encapsulates the logic pertinent to showing the result of
'xref-find-definitions'.  The user can change it to customize its
behavior and the display of results.

*** Search results show the buffer even for one hit.
The search-type Xref commands (e.g. 'xref-find-references' or
'project-find-regexp') now show the results buffer even when there is
only one hit.  This can be altered by changing
'xref-show-xrefs-function'.

*** Xref buffers support refreshing the search results.
A new command 'xref-revert-buffer' is bound to 'g'.

** Ecomplete

*** The ecomplete sorting has changed to a decay-based algorithm.
This can be controlled by the new 'ecomplete-sort-predicate' variable.
